# headhunter_postgres

./: README.md  database.ini  employers.json  main.py  pyproject.toml  utils.py
