[tool.poetry]
name = "headhunter-postgres"
version = "0.1.0"
description = ""
authors = ["voesem <voesem@gmail.com>"]
readme = "README.md"
packages = [{include = "headhunter_postgres"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
